<?xml version="1.0"?>
<package>
  <name>people_detector</name>
  <version>0.0.0</version>
  <description>The people_detector package</description>

  <maintainer email="dejan@todo.todo">dejan</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>